# Kedip

./: .dockerignore  .env.dist  .gitignore  .ruff.toml  DEPLOYMENT_GUIDE.md  Dockerfile.api  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  main.py  pyproject.toml  train.py
configs/: dev_test.yaml  production.yaml
data/: __init__.py  datasets.py  preprocessing.py
demo/: webcam_demo.py
deployment/: api.py
inference/: __init__.py  realtime.py
models/: __init__.py  blink_transformer.py
scripts/: __init__.py  download_datasets.py
training/: __init__.py  losses.py  metrics.py  trainer.py
web_ui/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
web_ui/src/: App.tsx  index.css  types.ts
web_ui/src/components/: CameraPanel.tsx  ErrorBanner.tsx  Header.tsx  InferencePanel.tsx  MetricGrid.tsx
web_ui/src/utils/: format.ts
